# DualSimplex

./: .gitignore  CMakeLists.txt  README.md
doc/: documentation.md
src/: main.cpp
src/DualSimplex/: DualSimplex.cpp  DualSimplex.hpp  Tableau.hpp
src/DualSimplex/data/: results.txt
src/DualSimplex/data/results/afiro/: tableau_1.txt  tableau_2.txt  tableau_3.txt  tableau_4.txt
src/DualSimplex/data/results/blend/: tableau_1.txt  tableau_2.txt  tableau_3.txt  tableau_4.txt
src/DualSimplex/data/results/lp11/: tableau_1.txt  tableau_2.txt
src/DualSimplex/data/results/lp20/: tableau_1.txt  tableau_2.txt  tableau_3.txt
src/DualSimplex/data/results/lp21/: tableau_1.txt  tableau_2.txt  tableau_3.txt
src/DualSimplex/data/results/lp22/: tableau_1.txt  tableau_2.txt  tableau_3.txt  tableau_4.txt
src/DualSimplex/data/results/lp23/: tableau_1.txt  tableau_2.txt  tableau_3.txt  tableau_4.txt
src/DualSimplex/data/results/lp5/: tableau_1.txt  tableau_2.txt
src/DualSimplex/data/results/lp6/: tableau_1.txt  tableau_2.txt
src/DualSimplex/data/results/test/: tableau_1.txt  tableau_2.txt  tableau_3.txt  tableau_4.txt  tableau_5.txt
src/DualSimplex/src/: main.cpp
src/DualSimplex/src/Solver/: DualSolver.cpp  DualSolver.hpp
src/DualSimplex/src/Tableau/: Tableau.hpp  TableauFilesManager.cpp  TableauFilesManager.hpp
src/DualSimplex/src/utils/: utils.cpp  utils.hpp
src/List/: ArrayList.cpp  ArrayList.hpp
src/utils/: utils.cpp  utils.hpp
